--- a/src/main/resources/templates/ranking/list.html
+++ b/src/main/resources/templates/ranking/list.html
@@ -76,5 +76,6 @@
 	</body>
     <th:block layout:fragment="scripts">
         <script type="text/javascript" th:src="@{/js/pages/ranking_list.js}" charset="UTF-8"></script>
+        <script type="text/javascript" th:src="@{/js/pages/tooltip.js}" charset="UTF-8"></script>
     </th:block>
 </html>
