--- a/src/main/resources/templates/_navigation.html
+++ b/src/main/resources/templates/_navigation.html
@@ -244,7 +244,7 @@
                                      th:alt="${@webSecurityUtil.getCurrentUsername()}" height="24" class="rounded">
                             </a>
                             <ul class="dropdown-menu">
-                                <li>
+                                <li class="bg-light">
                                     <h6 class="dropdown-header text-center fst-italic" th:text="${'-- ' + @webSecurityUtil.getCurrentUsername() + ' --'}">Dropdown header</h6>
                                 </li>
                                 <li>
