--- a/src/main/resources/templates/admin/active_users.html
+++ b/src/main/resources/templates/admin/active_users.html
@@ -8,10 +8,16 @@
 		<h1 th:text="#{active.users.title}"></h1>
         <div class="row">
             <div class="col-12 col-sm-6 col-md-4">
-                <div class="card" th:each="sessionTracking : ${userList}">
+                <div class="card mb-3" th:each="sessionTracking : ${userList}">
                     <div class="card-header">
-                        <span th:text="${sessionTracking.userName}"></span>
-                        <span class="right" th:text="${#temporals.format(sessionTracking.lastLogin, #messages.msg('app.dateformat'))}"></span>
+                        <div class="row">
+                            <div class="col-3">
+                                <span th:text="${sessionTracking.userName}"></span>
+                            </div>
+                            <div class="col-9 text-end">
+                                <span th:text="${#temporals.format(sessionTracking.lastLogin, 'yyyy-MM-dd HH:mm')}"></span>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
