--- a/src/main/resources/templates/admin/lastlogins.html
+++ b/src/main/resources/templates/admin/lastlogins.html
@@ -15,7 +15,7 @@
                                     <span th:text="${appUser.username}"></span>
                                 </div>
                                 <div class="col-9 text-end">
-                                    <span th:text="${#temporals.format(appUser.lastLogin, 'yyyy-MM-dd HH:mm:ss')}"></span>
+                                    <span th:text="${#temporals.format(appUser.lastLogin, 'yyyy-MM-dd HH:mm')}"></span>
                                 </div>
                             </div>
                         </div>
