loading tooltip js in layout template

--- a/src/main/resources/templates/_layout.html
+++ b/src/main/resources/templates/_layout.html
@@ -24,7 +24,7 @@
         <script type="text/javascript" th:src="@{/webjars/jquery/jquery.min.js}"></script>
         <script type="text/javascript" th:src="@{/webjars/bootstrap/js/bootstrap.bundle.min.js}"></script>
 		<script type="text/javascript" th:src="@{/lightbox/js/lightbox.min.js}"></script>
-
+        <script type="text/javascript" th:src="@{/js/pages/tooltip.js}" charset="UTF-8"></script>
 		<th:block layout:fragment="scripts"></th:block>
 	</body>
 </html>
