--- a/src/main/resources/templates/info/standings.html
+++ b/src/main/resources/templates/info/standings.html
@@ -8,7 +8,7 @@
 			<h1 th:text="#{standings.title}"></h1>
 			<div class="row">
 				<div class="col-12 col-sm-6 col-md-4 mb-3" th:if="${not #lists.isEmpty(standingsContainer.getForGroup(group))}" th:each="group : ${standingsContainer.groups}">
-					<h2 th:text="#{'group.entry.'+ ${group}}"></h2>
+					<h2 th:text="#{${group.getTitleMsgKey()}}"></h2>
 					<div class="table-responsive">
 						<table class="table small table-sm table-striped">
 							<thead class="table-light">
