centered button group

--- a/src/main/resources/templates/matches/list.html
+++ b/src/main/resources/templates/matches/list.html
@@ -59,7 +59,7 @@
 					  				</div>
 					  			</div>
 					  			<div class="col-6 mt-3">
-                                    <div class="d-flex justify-content-end">
+                                    <div class="d-flex justify-content-center">
                                         <a sec:authorize="hasAuthority('PERM_EDIT_MATCH')" th:href="@{'/match/' + ${matchCommand.matchId}}"
                                            class="btn btn-primary" role="button" th:title="#{matches.list.editMatch}">
                                             <span class="fas fa-edit"></span>
