--- a/src/main/resources/templates/bet/others.html
+++ b/src/main/resources/templates/bet/others.html
@@ -51,10 +51,12 @@
                 <div class="col-12 col-sm-6 col-md-3" th:each="bet : ${allBetsCommand.allBetsForMatch}">
                     <div class="card mt-3">
                         <div class="card-body">
-                            <div class="row">
+                            <div class="row align-items-center">
                                 <div class="col-6 pe-0">
                                     <span th:replace="~{fragments/profile_image :: profile_image_small_with_popup(${@webSecurityUtil.getUserProfileImageKeyFor(bet.userName)})}"></span>
-                                    <span th:text="${bet.userName}" class="ps-2"></span>
+                                    <div class="mt-1">
+                                        <span class="ms-3" th:text="${bet.userName}"/>
+                                    </div>
                                 </div>
                                 <div class="col-6 text-end">
                                     <span class="badge rounded-pill bg-success big-badge" th:classappend="${bet.getCssClassPenaltyWinnerOne()}"
