--- a/src/main/resources/templates/bet/extra_bets.html
+++ b/src/main/resources/templates/bet/extra_bets.html
@@ -10,7 +10,7 @@
 			<div class="row">
 				<div class="col-12 col-sm-6 col-md-4">
 					<div class="card mb-3">
-						<div class="card-header bg-success">
+						<div class="card-header bg-success-subtle">
 							<span class="bold" th:text="#{extra_bets.finalWinner} + ':'"></span>
 							<span class="right" th:text="${extraBetCommand.pointsOne} + '/' + #{extra_bets.points(${@runtimeSettingsUtil.getExtraPointsConfig().getPointsFinalWinner()})}"></span>
 						</div>
@@ -23,7 +23,7 @@
 				</div>
 				<div class="col-12 col-sm-6 col-md-4">
 					<div class="card mb-3">
-						<div class="card-header bg-warning">
+						<div class="card-header bg-warning-subtle">
 							<span class="bold" th:text="#{extra_bets.semiFinalWinner} + ':'"></span>
 							<span class="right" th:text="${extraBetCommand.pointsTwo} + '/' + #{extra_bets.points(${@runtimeSettingsUtil.getExtraPointsConfig().getPointsSemiFinalWinner()})}"></span>
 						</div>
@@ -36,7 +36,7 @@
 				</div>
 				<div th:if="${gameForThirdAvailable}" class="col-12 col-sm-6 col-md-4">
 					<div class="card mb-3">
-						<div class="card-header bg-info">
+						<div class="card-header bg-info-subtle">
 							<span class="bold" th:text="#{extra_bets.thirdFinalWinner} + ':'"></span>
 							<span class="right" th:text="${extraBetCommand.pointsThree} + '/' + #{extra_bets.points(${@runtimeSettingsUtil.getExtraPointsConfig().getPointsThirdFinalWinner()})}"></span>
 						</div>
