--- a/src/main/resources/templates/admin/backup.html
+++ b/src/main/resources/templates/admin/backup.html
@@ -7,21 +7,21 @@
 		<div layout:fragment="content">
 			<h1 th:text="#{administration.backup.title}"></h1>
 			<div class="row">
-				<div class="col-xs-12 col-sm-6 col-md-4">
-					<div class="form-group">
+				<div class="col-12 col-sm-6">
+					<div class="mb-3">
 						<span class="label label-danger" th:text="#{administration.backup.warning.hint}"></span>
 					</div>
-					<div class="form-group">
+					<div class="mb-3">
 						<a th:href="@{/backup/execute}" class="btn btn-primary" role="button" th:text="#{administration.backup.executeBackupButton}"></a>
 					</div>
 					<hr/>
 					<form id="backupForm" th:action="@{/backup/save}" th:object="${databaseBackupCommand}" action="#" method="post" role="form">
-						<div class="form-group">
-							<label for="backupFolder" th:text="#{backup.backupFolder} + ':'"></label>
+						<div class="mb-3">
+							<label for="backupFolder" th:text="#{backup.backupFolder} + ':'" class="form-label"></label>
 							<input id="backupFolder" type="text" th:field="*{backupFolder}" class="form-control" />
-							<p class="alert alert-danger field-alert" th:if="${#fields.hasErrors('backupFolder')}" th:errors="*{backupFolder}">backupFolder error</p>
+							<p class="alert alert-danger field-alert" th:if="${#fields.hasErrors('backupFolder')}" th:errors="*{backupFolder}"></p>
 						</div>
-						<div class="form-group">
+						<div class="mt-3">
 							<button type="submit" class="btn btn-primary" th:text="#{button.save}"></button>
 						</div>
 					</form>
